# CaPTk

./: .gitignore  .gitmodules  .travis.yml  0_Overview.md  1_Installation.txt  2_GettingStarted.txt  3_HowToGuides.txt  4_Science.txt  5.1_FeatureExtraction.txt  5_TechReference.txt  6.1_Download.txt  6.2_Installation.txt  6_Download.txt  7_People.txt  7_ReleaseNotes.txt  8_People.txt  9_ITCRCollaborations.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTestConfig.cmake  Dockerfile  Dockerfile_centos7  Extras.txt  FAQ.md  LICENSE  README.md  README.txt  Readme.md  azure-pipelines.yml  distribution.xml
docs_sources/: CMakeLists.txt  CaPTk_about_graphics.pptx  DoxygenLayout.xml  README.md  diagrams.pptx  doxy.config.in  doxy_dev.config.in  html_footer.html
docs_sources/darkThemeTest/: CMakeLists.txt  doxy.config.in
docs_sources/tutorial/: 1_credits.html  1_credits.md
src/: CAPTk.cpp  CAPTk.h  CMakeLists.txt  CaPTk.cxx  CaPTkGUIUtils.cpp  CapTkClassifierUtils.h  CapTkDefines.h  CapTkGUIUtils.h  CapTkUtils.h
src/Common/: CMakeLists.txt
src/Common/inc/: CaPTkClassifierUtils.h  CaPTkGUIUtils.h  CaPTkUtils.h
src/Common/src/: CaPTkGUIUtils.cpp
src/applications/: BraTSPipeline.cxx  CMakeLists.txt  CollageFeatures.cxx  CollageFeatures.h  DeepMedic.cxx  DeepMedicNormalizer.cxx  DeepMedicNormalizer.h  DiffusionDerivatives.cpp  DiffusionDerivatives.cxx  DiffusionDerivatives.h  DirectionalityEstimate.cpp  DirectionalityEstimate.cxx  DirectionalityEstimate.h  EGFRvIIIIndexPredictor.cpp  EGFRvIIIIndexPredictor.cxx  EGFRvIIIIndexPredictor.h  EGFRvIIISurrogateIndex.cpp  EGFRvIIISurrogateIndex.cxx  EGFRvIIISurrogateIndex.h  FeatureExtraction.cpp  FeatureExtraction.cxx  FeatureExtraction.h  FeatureExtraction.hxx  FetalBrain.h  GeodesicSegmentation.cpp  GeodesicSegmentation.cxx  GeodesicSegmentation.h  GreedyRegistration.cxx  GreedyRegistration.h  GreedyRegistration.hxx  ImagingSubtypePredictor.cpp  ImagingSubtypePredictor.cxx  ImagingSubtypePredictor.h  MolecularSubtypePredictor.cpp  MolecularSubtypePredictor.cxx  MolecularSubtypePredictor.h  PerfusionAlignment.cpp  PerfusionAlignment.cxx  PerfusionAlignment.h  PerfusionDerivatives.cpp  (+34 more)
src/applications/BraTSPipeline/: CMakeLists.txt  README.md
src/applications/BreastTexturePipeline/: CMakeLists.txt  README.md
src/applications/FeatureExtraction/: CMakeLists.txt  README.md
src/applications/FeatureExtraction_includes/: FeatureBase.h  FeatureMap.h  GLSZMFeatures.h  GaborWavelets.h  LBPFeatures2D.h  LBPMeasures.h  NGTDMFeatures.h  PowerSpectrum.h  featureParser.h  itkEnhancedHistogramToNeighbourhoodGreyLevelDifferenceFeaturesFilter.h  itkEnhancedHistogramToNeighbourhoodGreyLevelDifferenceFeaturesFilter.hxx  itkEnhancedHistogramToRunLengthFeaturesFilter.h  itkEnhancedHistogramToRunLengthFeaturesFilter.hxx  itkEnhancedHistogramToSizeZoneFeaturesFilter.hxx  itkEnhancedScalarImageToNeighbourhoodGreyLevelDifferenceFeaturesFilter.h  itkEnhancedScalarImageToNeighbourhoodGreyLevelDifferenceFeaturesFilter.hxx  itkEnhancedScalarImageToNeighbourhoodGreyLevelDifferenceMatrixFilter.h  itkEnhancedScalarImageToRunLengthMatrixFilter.h  itkEnhancedScalarImageToRunLengthMatrixFilter.hxx  itkEnhancedScalarImageToSizeZoneFeaturesFilter.h  itkEnhancedScalarImageToSizeZoneFeaturesFilter.hxx
src/applications/GeodesicTraining/: CMakeLists.txt  EXTRA_ADVANCED.md  EXTRA_MODES.md  GeodesicTrainingCaPTkApp.cpp  GeodesicTrainingCaPTkApp.h  README.md
src/applications/PerfusionAlignment/: CMakeLists.txt  README.md
src/applications/Preprocessing/: CMakeLists.txt  Preprocessing.cxx  README.md
src/applications/TrainingModule_includes/: BackwardFeatureSelectionStrategy.cpp  BackwardFeatureSelectionStrategy.h  EffectSizeFeatureSelectionStrategy.cpp  EffectSizeFeatureSelectionStrategy.h  ForwardFeatureSelectionStrategy.cpp  ForwardFeatureSelectionStrategy.h  IClassifierStrategy.h  IFeatureSelectionStrategy.h  OpenCVBoostedTreesStrategy.cpp  OpenCVBoostedTreesStrategy.h  OpenCVRandomForestStrategy.cpp  OpenCVRandomForestStrategy.h  OpenCVSGDSVMStrategy.cpp  OpenCVSGDSVMStrategy.h  OpenCVSVMClassifierStrategy.cpp  OpenCVSVMClassifierStrategy.h  RandomForestFeatureSelectionStrategy.cpp  RandomForestFeatureSelectionStrategy.h  ReliefFFeatureSelectionStrategy.cpp  ReliefFFeatureSelectionStrategy.h  SelectOptimalFeatureSelectionStrategy.cpp  SelectOptimalFeatureSelectionStrategy.h  TrainingModuleParameters.h  TrainingModuleResult.h  UserSelectedFeaturesStrategy.cpp  UserSelectedFeaturesStrategy.h
src/applications/Utilities/: CMakeLists.txt  README.md
src/cbica_toolkit/: CMakeLists.txt  README.md  cbicaCmdParser.cpp  cbicaCmdParser.h  cbicaDTIProcessingManager.cpp  cbicaDTIProcessingManager.h  cbicaITKImageInfo.cpp  cbicaITKImageInfo.h  cbicaITKSafeImageIO.h  cbicaITKUtilities.h  cbicaLogging.cpp  cbicaLogging.h  cbicaStatistics.h  cbicaUtilities.cpp  cbicaUtilities.h
src/common/: CMakeLists.txt
src/cwl/: DiffusionDerivatives.cwl  EGFRvIIIIndexPredictor.cwl  MolecularSubtypePredictor.cwl  PerfusionDerivatives.cwl  PerfusionPCA.cwl  PopulationAtlases.cwl  PseudoProgressionEstimator.cwl  RecurrenceEstimator.cwl  SurvivalPredictor.cwl  TrainingModule.cwl
src/gui/: ASyncAppManager.cpp  ASyncAppManager.h  ApplicationBase.h  CMakeLists.txt  FeatureMap.h  InteractorStyleNavigator.cpp  InteractorStyleNavigator.h  Landmarks.cpp  Landmarks.h  QBorderWidget.h  QTablePushButton.cpp  QTablePushButton.h  SimpleImageManager.cpp  SimpleImageManager.h  Slicer.cpp  Slicer.h  SlicerManager.cpp  SlicerManager.h  SlicerManagerCommand.cpp  SlicerManagerCommand.h  fBottomImageInfoTip.cpp  fBottomImageInfoTip.h  fDCM2NIfTI.cpp  fDCM2NIfTI.h  fDeepMedicDialog.cpp  fDeepMedicDialog.h  fDeepMedicNormDialog.cpp  fDeepMedicNormDialog.h  fDiffusionMeasuresDialog.cpp  fDiffusionMeasuresDialog.h  fDirectionalityDialog.cpp  fDirectionalityDialog.h  fDrawingPanel.cpp  fDrawingPanel.h  fEGFRvIIIDialog.cpp  fEGFRvIIIDialog.h  fFeatureDialog.cpp  fFeatureDialog.h  fFeaturePanel.cpp  fFeaturePanel.h  (+80 more)
src/view/: CMakeLists.txt  README.md
testing/: AllTests.cxx  CMakeLists.txt  README.md
(+980 files in other folders)
